test_programs/compile_failure/regression_10967/src/main.nr
fn main() {
    let mut unit_array: [(); 1] = [()];
    unit_array[3];
}